--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,62 @@
-# Ensure version compatibility between bfabric_web_apps and bfabric_web_app_template.
-# Both must be the same version to avoid compatibility issues.
-# Example: If bfabric_web_apps is version 0.1.3, bfabric_web_app_template must also be 0.1.3.
-# Verify and update versions accordingly before running the application.
-# bfabric-web-apps==0.1.7
 annotated-types==0.7.0
 async-timeout==5.0.1
-attrs==24.2.0
+attrs==25.3.0
+bfabric==1.13.23
+#-e git+https://github.com/GWCustom/bfabric-web-apps@30205241ed1e319726b92216ab130c9354b0c045#egg=bfabric_web_apps
+#bfabric_web_apps==0.1.8
 blinker==1.9.0
-certifi==2024.8.30
-charset-normalizer==3.4.0
-click==8.1.7
-cyclopts==3.1.2
-dash==2.18.2
-dash-bootstrap-components==1.6.0
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+cyclopts==3.11.2
+dash==3.0.2
+dash-bootstrap-components==2.0.0
+dash_daq==0.6.0
+dnspython==2.7.0
 docstring_parser==0.16
 docutils==0.21.2
+email_validator==2.2.0
 Flask==3.0.3
 idna==3.10
-importlib_metadata==8.5.0
+importlib_metadata==8.6.1
 isodate==0.7.2
 itsdangerous==2.2.0
-Jinja2==3.1.4
-loguru==0.7.2
-lxml==5.3.0
+Jinja2==3.1.6
+loguru==0.7.3
+lxml==5.3.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+narwhals==1.33.0
 nest-asyncio==1.6.0
+numpy==2.2.5
 packaging==24.2
-platformdirs==4.3.6
-plotly==5.24.1
-polars-lts-cpu==1.16.0
-pydantic==2.10.6
-pydantic_core==2.27.2
+pandas==2.2.3
+platformdirs==4.3.7
+plotly==6.0.1
+polars==1.26.0
+pydantic==2.11.1
 pydantic-settings==2.8.1
-pydantic[email]
-Pygments==2.18.0
+pydantic_core==2.33.0
+Pygments==2.19.1
 python-dateutil==2.9.0.post0
-pytz==2024.2
+python-dotenv==1.1.0
+pytz==2025.2
 PyYAML==6.0.2
 redis==5.2.1
 requests==2.32.3
 requests-file==2.1.0
 requests-toolbelt==1.0.0
 retrying==1.3.4
-rich==13.9.4
+rich==14.0.0
 rich-rst==1.3.1
 rq==1.15.1
-six==1.16.0
+six==1.17.0
 suds==1.2.0
-tenacity==9.0.0
-typing_extensions==4.12.2
-urllib3==2.2.3
+typing-inspection==0.4.0
+typing_extensions==4.13.0
+tzdata==2025.2
+urllib3==2.3.0
 Werkzeug==3.0.6
 zeep==4.3.1
 zipp==3.21.0
-pandas==2.2.3
